--- a/index.html
+++ b/index.html
@@ -551,8 +551,8 @@ on Artificial Intelligence</i>).
 	</li></div>	
 	<div class="pub all journal kr kr-el kr-ea">
 	<li> 
-			<a href="https://ieeexplore.ieee.org/document/5680902" target="_blank">Jie Tang, A.C.M. Fong, Bo Wang, and Jing Zhang. </a>  
-			<br /> Jie Tang, A.C.M. Fong, Bo Wang, and <b>Jing Zhang</b>b. 
+			<a href="https://ieeexplore.ieee.org/document/5680902" target="_blank">A Unified Probabilistic Framework for Name Disambiguation in Digital Library.</a>  
+			<br /> Jie Tang, A.C.M. Fong, Bo Wang, and <b>Jing Zhang</b>. 
 			<br /> <b>TKDE'12</b>.  
 	</li></div>	
 
