--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ My research interest falls in data mining and natural language processing. My cu
 	</li></div>
 	<div class="pub all conf LLM LLM-prompt">
 		<li> 
-			<a href="" target="_blank">Chain of Thought Prompting Elicits Knowledge Augmentation.</a>  
+			<a href="https://arxiv.org/pdf/2307.01640.pdf" target="_blank">Chain of Thought Prompting Elicits Knowledge Augmentation.</a>  
 			<br /> Dingjun Wu, <b>Jing Zhang</b>, Xinmei Huang.
 			<br /> <b>Findings of ACL'23</b>. 
 	</li></div>
