--- a/index.html
+++ b/index.html
@@ -218,7 +218,9 @@ My research interest falls in data mining and natural language processing. My cu
 	<li style="list-style-type:none">
 		<b>	<a class="url"  onclick="show('LLM')">large language model</a> </b>:  
 			<a class="url"  onclick="show('LLM-prompt')">prompt engineering</a> |
-			<a class="url"  onclick="show('LLM-ka')">knowledge augmentation</a> 
+			<a class="url"  onclick="show('LLM-ka')">knowledge augmentation</a> |
+			<a class="url"  onclick="show('LLM-eval')">evaluation</a> 
+			<a class="url"  onclick="show('LLM-app')">application</a> 
 		<br />
 	</li>
 	<li style="list-style-type:none">
@@ -253,6 +255,18 @@ My research interest falls in data mining and natural language processing. My cu
  
 
 <ol>
+	<div class="pub all conf LLM LLM-app">
+		<li> 
+			<a href="https://aclanthology.org/2023.emnlp-main.108.pdf" target="_blank">A Generation-based Deductive Method for Math Word Problems.</a>  
+			<br /> Yuxuan Hu, <b>Jing  Zhang</b>b, Haoyang Li, Cuiping Li, Hong Chen.
+			<br /> <b>EMNLP'23</b>. 
+	</li></div>
+	<div class="pub all conf LLM LLM-eval">
+		<li> 
+			<a href="https://aclanthology.org/2023.findings-emnlp.1049.pdf" target="_blank">FFAEval: Evaluating Dialogue System via Free-For-All Ranking.</a>  
+			<br /> Zeyao Ma, Zijun Yao, <b>Jing Zhang</b>, Jifan Yu,  Xiaohan Zhang, Juanzi  Li, Jie Tang.
+			<br /> <b>Findings of EMNLP'23</b>. 
+	</li></div>
 	<div class="pub all conf kr kr-dialogue LLM LLM-ka">
 		<li> 
 			<a href="https://arxiv.org/pdf/2302.14401.pdf" target="_blank">GLM-Dialog: Noise-tolerant Pre-training for Knowledge-grounded Dialogue Generation.</a>  
