--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ My research interest falls in data mining and natural language processing. My cu
 		<b>	<a class="url"  onclick="show('LLM')">large language model</a> </b>:  
 			<a class="url"  onclick="show('LLM-prompt')">prompt engineering</a> |
 			<a class="url"  onclick="show('LLM-ka')">knowledge augmentation</a> |
-			<a class="url"  onclick="show('LLM-eval')">evaluation</a> 
+			<a class="url"  onclick="show('LLM-eval')">evaluation</a> |
 			<a class="url"  onclick="show('LLM-app')">application</a> 
 		<br />
 	</li>
