--- a/index.html
+++ b/index.html
@@ -252,9 +252,18 @@ My research interest falls in data mining and natural language processing. My cu
 	</li>
 </p>
 
- 
+
+	
 
 <ol>
+	<div class="pub all conf LLM LLM-app">
+		<li> 
+			<a href="https://arxiv.org/pdf/2402.16347.pdf" target="_blank">CodeS: Towards Building Open-source Language Models for
+Text-to-SQL.</a>  
+			<br /> Haoyang Li, <b>Jing  Zhang</b>b, Hanbing Liu, Ju Fan, Xiaokang Zhang, Jun Zhu, Renjie Wei, Hongyan Pan, Cuiping Li, Hong Chen.
+			<br /> <b>SIGMOD'24</b>. 
+			<br><a class="button" href="https://github.com/RUCKBReasoning/codes" target="_blank">code&model&data</a> 
+	</li></div>
 	<div class="pub all conf LLM LLM-app">
 		<li> 
 			<a href="https://aclanthology.org/2023.emnlp-main.108.pdf" target="_blank">A Generation-based Deductive Method for Math Word Problems.</a>  
