--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ Renmin University of China<br />
 <!--h3><a name="interest"> Research Interests</a> </h3-->
 
 <p> I am an associate professor at <a href="http://info.ruc.edu.cn/">School of Information</a>, <a href="http://www.ruc.edu.cn/">Renmin University of China</a>. Prior to that, I received my Ph.D. degree from <a href="https://www.cs.tsinghua.edu.cn/">Department of Computer Science and Technology</a>, <a href="http://www.tsinghua.edu.cn">Tsinghua University</a> under supervision of Professor <a href="http://keg.cs.tsinghua.edu.cn/jietang/">Jie Tang</a> and Professor <a href="http://keg.cs.tsinghua.edu.cn/persons/ljz/">Juanzi Li</a>. 
-My research interest falls in data mining and natural language processing. My current research focuses on large language models and knowledge engineering. More information about my experience and research can be found on <a href="https://scholar.google.com/citations?user=T7Wa3GQAAAAJ&hl=en" target="_blank">Google Scholar</a>.
+My research direction is data mining and knowledge discovery. My current research revolves around tailoring large language models to suit specific domains, investigating model compression methods, and improving inference efficiency. I prioritize the application of these approaches to structured data and the optimization of databases. More information about my experience and research can be found on <a href="https://scholar.google.com/citations?user=T7Wa3GQAAAAJ&hl=en" target="_blank">Google Scholar</a>.
 <p>
 
 <p><font color="red"> I am looking for highly-motivated students to work with me. </font> If interested, please drop me a message by email. </p>	
@@ -263,6 +263,18 @@ Text-to-SQL.</a>
 			<br /> Haoyang Li, <b>Jing  Zhang</b>, Hanbing Liu, Ju Fan, Xiaokang Zhang, Jun Zhu, Renjie Wei, Hongyan Pan, Cuiping Li, Hong Chen.
 			<br /> <b>SIGMOD'24</b>. 
 			<br><a class="button" href="https://github.com/RUCKBReasoning/codes" target="_blank">code&model&data</a> 
+	</li></div>
+			<li> 
+			<a href="" target="_blank">Open-World Semi-Supervised Learning for Node
+Classification.</a>  
+			<br /> Yanling Wang, <b>Jing Zhang</b>b, Lingxi Zhang, Lixin Liu, Yuxiao Dong, Cuiping Li, Hong Chen, Hongzhi Yin
+			<br /> <b>ICDE'24</b>. 
+	</li></div>
+			<li> 
+			<a href="" target="_blank">Open-World Semi-Supervised Learning for Node
+Classification.</a>  
+			<br /> Yanling Wang, <b>Jing Zhang</b>b, Lingxi Zhang, Lixin Liu, Yuxiao Dong, Cuiping Li, Hong Chen, Hongzhi Yin
+			<br /> <b>ICDE'24</b>. 
 	</li></div>
 	<div class="pub all conf LLM LLM-app">
 		<li> 
