--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ Text-to-SQL.</a>
 			<li> 
 			<a href="" target="_blank">Open-World Semi-Supervised Learning for Node
 Classification.</a>  
-			<br /> Yanling Wang, <b>Jing Zhang</b>b, Lingxi Zhang, Lixin Liu, Yuxiao Dong, Cuiping Li, Hong Chen, Hongzhi Yin
+			<br /> Yanling Wang, <b>Jing Zhang</b>, Lingxi Zhang, Lixin Liu, Yuxiao Dong, Cuiping Li, Hong Chen, Hongzhi Yin
 			<br /> <b>ICDE'24</b>. 
 	</li></div>
 			<li> 
