--- a/index.html
+++ b/index.html
@@ -264,13 +264,14 @@ Text-to-SQL.</a>
 			<br /> <b>SIGMOD'24</b>. 
 			<br><a class="button" href="https://github.com/RUCKBReasoning/codes" target="_blank">code&model&data</a> 
 	</li></div>
+	<div class="pub all conf grl grl-pt">
 			<li> 
 			<a href="" target="_blank">Open-World Semi-Supervised Learning for Node
 Classification.</a>  
 			<br /> Yanling Wang, <b>Jing Zhang</b>, Lingxi Zhang, Lixin Liu, Yuxiao Dong, Cuiping Li, Hong Chen, Hongzhi Yin
 			<br /> <b>ICDE'24</b>. 
 	</li></div>
-			<li> 
+			 
 	<div class="pub all conf LLM LLM-app">
 		<li> 
 			<a href="https://aclanthology.org/2023.emnlp-main.108.pdf" target="_blank">A Generation-based Deductive Method for Math Word Problems.</a>  
