--- a/index.html
+++ b/index.html
@@ -268,10 +268,15 @@ Text-to-SQL.</a>
 			<li> 
 			<a href="" target="_blank">Open-World Semi-Supervised Learning for Node
 Classification.</a>  
-			<br /> Yanling Wang, <b>Jing Zhang</b>, Lingxi Zhang, Lixin Liu, Yuxiao Dong, Cuiping Li, Hong Chen, Hongzhi Yin
+			<br /> Yanling Wang, <b>Jing Zhang</b>, Lingxi Zhang, Lixin Liu, Yuxiao Dong, Cuiping Li, Hong Chen, Hongzhi Yin.
 			<br /> <b>ICDE'24</b>. 
 	</li></div>
-			 
+	<div class="pub all conf LLM">
+			<li> 
+			<a href="" target="_blank">Diversifying Question Generation over Knowledge Base via External Natural Questions.</a>  
+			<br /> Shasha Guo, <b>Jing Zhang</b>, Xirui Ke, Cuiping Li, Hong Chen
+			<br /> <b>LREC-COLING'24</b>. 
+	</li></div>
 	<div class="pub all conf LLM LLM-app">
 		<li> 
 			<a href="https://aclanthology.org/2023.emnlp-main.108.pdf" target="_blank">A Generation-based Deductive Method for Math Word Problems.</a>  
