--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ Classification.</a>
 	<div class="pub all conf LLM LLM-app">
 		<li> 
 			<a href="https://aclanthology.org/2023.emnlp-main.108.pdf" target="_blank">A Generation-based Deductive Method for Math Word Problems.</a>  
-			<br /> Yuxuan Hu, <b>Jing  Zhang</b>b, Haoyang Li, Cuiping Li, Hong Chen.
+			<br /> Yuxuan Hu, <b>Jing  Zhang</b>, Haoyang Li, Cuiping Li, Hong Chen.
 			<br /> <b>EMNLP'23</b>. 
 	</li></div>
 	<div class="pub all conf LLM LLM-eval">
