--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ Classification.</a>
 			<br /> Yanling Wang, <b>Jing Zhang</b>, Lingxi Zhang, Lixin Liu, Yuxiao Dong, Cuiping Li, Hong Chen, Hongzhi Yin.
 			<br /> <b>ICDE'24</b>. 
 	</li></div>
-	<div class="pub all conf LLM">
+	<div class="pub all conf LLM kr kr-qa">
 	<li> 
 			<a href="" target="_blank">Diversifying Question Generation over Knowledge Base via External Natural Questions.</a>  
 			<br /> Shasha Guo, <b>Jing Zhang</b>, Xirui Ke, Cuiping Li, Hong Chen
@@ -301,7 +301,7 @@ Classification.</a>
 			<br /> Bo Chen, <b>Jing Zhang</b>, Fanjin Zhang, Tianyi Han, Yuqing Cheng, Xiaoyan Li, Yuxiao Dong, Jie Tang.
 			<br /> <b>KDD'23 (ADS)</b>. 
 	</li></div>
-	<div class="pub all conf kr kr-qa">
+	<div class="pub all conf LLM kr kr-qa">
 		<li> 
 			<a href="https://arxiv.org/pdf/2306.14722.pdf" target="_blank">FC-KBQA: A Fine-to-Coarse Composition Framework for Knowledge Base Question Answering.</a>  
 			<br /> Lingxi Zhang, <b>Jing Zhang</b>, Yanling Wang, Shulin Cao, Xinmei Huang, Cuiping Li, Hong Chen, Juanzi Li.
