--- a/index.html
+++ b/index.html
@@ -217,10 +217,11 @@ My research direction is data mining and knowledge discovery. My current researc
 	</li>
 	<li style="list-style-type:none">
 		<b>	<a class="url"  onclick="show('LLM')">large language model</a> </b>:  
-			<a class="url"  onclick="show('LLM-prompt')">prompt engineering</a> |
+			<a class="url"  onclick="show('LLM-finetune')">fine-tuning</a> |
 			<a class="url"  onclick="show('LLM-ka')">knowledge augmentation</a> |
+			<a class="url"  onclick="show('LLM4Compression')">LLM Compression</a> 
+			<a class="url"  onclick="show('LLM4StructuredData')">LLM for Structured Data</a> 
 			<a class="url"  onclick="show('LLM-eval')">evaluation</a> |
-			<a class="url"  onclick="show('LLM-app')">application</a> 
 		<br />
 	</li>
 	<li style="list-style-type:none">
@@ -256,7 +257,7 @@ My research direction is data mining and knowledge discovery. My current researc
 	
 
 <ol>
-	<div class="pub all conf LLM LLM-app">
+	<div class="pub all conf LLM LLM4StructuredData">
 	<li> 
 			<a href="https://arxiv.org/pdf/2402.16347.pdf" target="_blank">CodeS: Towards Building Open-source Language Models for
 Text-to-SQL.</a>  
@@ -271,13 +272,13 @@ Classification.</a>
 			<br /> Yanling Wang, <b>Jing Zhang</b>, Lingxi Zhang, Lixin Liu, Yuxiao Dong, Cuiping Li, Hong Chen, Hongzhi Yin.
 			<br /> <b>ICDE'24</b>. 
 	</li></div>
-	<div class="pub all conf LLM kr kr-qa">
+	<div class="pub all conf LLM LLM4StructuredData kr kr-qa">
 	<li> 
 			<a href="" target="_blank">Diversifying Question Generation over Knowledge Base via External Natural Questions.</a>  
 			<br /> Shasha Guo, <b>Jing Zhang</b>, Xirui Ke, Cuiping Li, Hong Chen
 			<br /> <b>LREC-COLING'24</b>. 
 	</li></div>
-	<div class="pub all conf LLM LLM-app">
+	<div class="pub all conf LLM">
 		<li> 
 			<a href="https://aclanthology.org/2023.emnlp-main.108.pdf" target="_blank">A Generation-based Deductive Method for Math Word Problems.</a>  
 			<br /> Yuxuan Hu, <b>Jing  Zhang</b>, Haoyang Li, Cuiping Li, Hong Chen.
@@ -289,7 +290,7 @@ Classification.</a>
 			<br /> Zeyao Ma, Zijun Yao, <b>Jing Zhang</b>, Jifan Yu,  Xiaohan Zhang, Juanzi  Li, Jie Tang.
 			<br /> <b>Findings of EMNLP'23</b>. 
 	</li></div>
-	<div class="pub all conf kr kr-dialogue LLM LLM-ka">
+	<div class="pub all conf kr kr-dialogue LLM LLM-finetune LLM-ka">
 		<li> 
 			<a href="https://arxiv.org/pdf/2302.14401.pdf" target="_blank">GLM-Dialog: Noise-tolerant Pre-training for Knowledge-grounded Dialogue Generation.</a>  
 			<br /> <b>Jing Zhang</b>, Xiaokang Zhang, Daniel Zhang-Li, Jifan Yu, Zijun Yao, Zeyao Ma, Yiqi Xu, Haohua Wang, Xiaohan Zhang, Nianyi Lin, Sunrui Lu, Juanzi Li, Jie Tang.
@@ -301,19 +302,19 @@ Classification.</a>
 			<br /> Bo Chen, <b>Jing Zhang</b>, Fanjin Zhang, Tianyi Han, Yuqing Cheng, Xiaoyan Li, Yuxiao Dong, Jie Tang.
 			<br /> <b>KDD'23 (ADS)</b>. 
 	</li></div>
-	<div class="pub all conf LLM kr kr-qa">
+	<div class="pub all conf LLM LLM4StructuredData kr kr-qa">
 		<li> 
 			<a href="https://arxiv.org/pdf/2306.14722.pdf" target="_blank">FC-KBQA: A Fine-to-Coarse Composition Framework for Knowledge Base Question Answering.</a>  
 			<br /> Lingxi Zhang, <b>Jing Zhang</b>, Yanling Wang, Shulin Cao, Xinmei Huang, Cuiping Li, Hong Chen, Juanzi Li.
 			<br /> <b>ACL'23</b>. 
 	</li></div>
-	<div class="pub all conf LLM LLM-prompt">
+	<div class="pub all conf LLM LLM-ka">
 		<li> 
 			<a href="https://arxiv.org/pdf/2307.01640.pdf" target="_blank">Chain of Thought Prompting Elicits Knowledge Augmentation.</a>  
 			<br /> Dingjun Wu, <b>Jing Zhang</b>, Xinmei Huang.
 			<br /> <b>Findings of ACL'23</b>. 
 	</li></div>
-	<div class="pub all conf kr kr-text2sql">
+	<div class="pub all conf kr kr-text2sql LLM LLM4StructuredData">
 		<li> 
 			<a href="https://arxiv.org/abs/2302.05965" target="_blank">RESDSQL: Decoupling Schema Linking and Skeleton Parsing for Text-to-SQL.</a>  
 			<br /> Haoyang Li, <b>Jing Zhang</b>, Cuiping Li, Hong Chen.
@@ -332,20 +333,20 @@ Classification.</a>
 			<br /> Bo Chen, <b>Jing Zhang</b>, Xiaokang Zhang, Yuxiao Dong, Jian Song, Peng Zhang, Kaibo Xu, Evgeny Kharlamov, Jie Tang.
 			<br /> <b>TKDE'22</b>. 
 	</li></div>
-	<div class="pub all conf kr kr-qa">
+	<div class="pub all conf kr kr-qa LLM LLM4StructuredData">
 		<li> 
 			<a href="publications/EMNLP22-Guo-et-al-DSM.pdf" target="_blank">DSM: Question Generation over Knowledge Base via Modeling Diverse Subgraphs with Meta-learner.</a>  
 			<br /> Shasha Guo, <b>Jing Zhang</b>, Yanling Wang, Qianyi Zhang, Cuiping Li and Hong Chen.
 			<br /> <b>EMNLP'22</b>. 
 	</li></div>
 
-	<div class="pub all conf kr kr-qa">
+	<div class="pub all conf kr kr-qa LLM LLM4StructuredData">
 		<li> 
 			<a href="publications/EMNLP22-Ke-et-al-ConversationKBQA.pdf" target="_blank">Knowledge-augmented Self-training of A Question Rewriter for Conversational Knowledge Base Question Answering.</a>  
 			<br /> Xirui Ke, <b>Jing Zhang</b>, Xin Lv, Yiqi Xu, Shulin Cao, Cuiping Li, Hong Chen and Juanzi Li. 
 			<br /> <b>Findings of EMNLP'22</b> (<i>Findings of the Association for Computational Linguistics: EMNLP 2022</i>). 
 	</li></div>
-	<div class="pub all conf kr kr-dialogue">
+	<div class="pub all conf kr kr-dialogue LLM">
 		<li> 
 			<a href="https://dl.acm.org/doi/abs/10.1145/3534678.3539135" target="_blank">XDAI: A Tuning-free Framework for Exploiting Pre-trained Language Models in Knowledge Grounded Dialogue Generation.</a>  
 			<br /> Jifan Yu, Xiaohan Zhang, Yifan Xu, Xuanyu Lei, Xinyu Guan, <b>Jing Zhang</b>, Lei Hou, Juanzi Li, and Jie Tang. 
