--- a/index.html
+++ b/index.html
@@ -278,6 +278,12 @@ Classification.</a>
 			<br /> Shasha Guo, <b>Jing Zhang</b>, Xirui Ke, Cuiping Li, Hong Chen
 			<br /> <b>LREC-COLING'24</b>. 
 	</li></div>
+	<div class="pub all conf LLM LLM4Compression">
+		<li> 
+			<a href="https://arxiv.org/pdf/2308.16475.pdf" target="_blank">Transformer Compression via Subspace Projection.</a>  
+			<br /> Yuxuan Hu, <b>Jing Zhang</b>, Chen Zhao, Cuiping Li, Hong Chen.
+			<br /> <b>arXiv:2308.16475</b>. 
+	</li></div>
 	<div class="pub all conf LLM">
 		<li> 
 			<a href="https://aclanthology.org/2023.emnlp-main.108.pdf" target="_blank">A Generation-based Deductive Method for Math Word Problems.</a>  
