--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ My research direction is data mining and knowledge discovery. My current researc
 			<a class="url"  onclick="show('LLM-finetune')">fine-tuning</a> |
 			<a class="url"  onclick="show('LLM-ka')">knowledge augmentation</a> |
 			<a class="url"  onclick="show('LLM4Compression')">LLM Compression</a> 
-			<a class="url"  onclick="show('LLM4StructuredData')">LLM for Structured Data</a> 
+			<a class="url"  onclick="show('LLM4StructuredData')">LLM for Structured Data</a> |
 			<a class="url"  onclick="show('LLM-eval')">evaluation</a> |
 		<br />
 	</li>
