--- a/index.html
+++ b/index.html
@@ -618,6 +618,10 @@ on Artificial Intelligence</i>).
 <hr />
 <h3 class="big"><a name="talks"> Invited Talks </a></h3>
 <ol>
+	<li>2023: Invited Talk about StructruedDataLLM at the 11th China National Conference on Social Media Processing</li>
+	<li>2023: Invited Talk about Integrating Structured Data With Pre-trained Large-Scale Langugae Model at School of Computer Science & Techonlogy, Anhui University.</li>
+	<li>2023: Invited Talk about Integrating Structured Data With Pre-trained Large-Scale Langugae Model by CCF CCF Database Special Committee.</li>
+	<li>2023: Invited Talk about ChatGPT at PingCAP.</li>
 	<li>2022: Invited Talk about Graph Contrastive Learning at BAAI Seminar 2022. <a class="button" href="publications/Slides-Cluster-Enhanced Graph Contrastive Learning-zhangjing-2022.6.2.pdf" target="_blank">slides</a> </span> </li>
 	<li>2022: Invited Talk about Knowledge Graph Question Answering on WAIC 2022. <a class="button" href="publications/Slides-KBQA-Zhangjing-WAIC-2022.9.2.pdf" target="_blank">slides</a> </span> </li> 
 	<li>2021: Invited Talk about Neural-Symbolic Reasoning on Knowledge Graphs on CCKS 2021. <a class="button" href="publications/Slides-Neural-Symbolic-Reasoning.pdf" target="_blank">slides</a> </span> </li>
