--- a/index.html
+++ b/index.html
@@ -653,12 +653,12 @@ on Artificial Intelligence</i>).
 <b>Conference PC members:</b> 
 <br />
 </p><ol>
+	<li>2024: KDD, WWW, ACL, AAAI
 	<li>2023: KDD, WWW (SPC), AAAI, ECML/PKDD (SPC) 
 	<li>2022: KDD, WWW, IJCAI, AAAI, WSDM
 	<li>2021: KDD, WWW, IJCAI, ECML/PKDD (SPC) 
 	<li>2020: KDD, WWW, IJCAI, ECML/PKDD
 </ol>
-
 
 
 <p class="big">
