--- a/index.html
+++ b/index.html
@@ -619,8 +619,8 @@ on Artificial Intelligence</i>).
 <h3 class="big"><a name="talks"> Invited Talks </a></h3>
 <ol>
 	<li>2023: Invited Talk about StructruedDataLLM at the 11th China National Conference on Social Media Processing</li>
-	<li>2023: Invited Talk about Integrating Structured Data With Pre-trained Large-Scale Langugae Model at School of Computer Science & Techonlogy, Anhui University.</li>
-	<li>2023: Invited Talk about Integrating Structured Data With Pre-trained Large-Scale Langugae Model by CCF CCF Database Special Committee.</li>
+	<li>2023: Invited Talk about Integrating Structured Data With LLM at School of Computer Science & Techonlogy, Anhui University.</li>
+	<li>2023: Invited Talk about Integrating Structured Data With LLM by CCF CCF Database Special Committee.</li>
 	<li>2023: Invited Talk about ChatGPT at PingCAP.</li>
 	<li>2022: Invited Talk about Graph Contrastive Learning at BAAI Seminar 2022. <a class="button" href="publications/Slides-Cluster-Enhanced Graph Contrastive Learning-zhangjing-2022.6.2.pdf" target="_blank">slides</a> </span> </li>
 	<li>2022: Invited Talk about Knowledge Graph Question Answering on WAIC 2022. <a class="button" href="publications/Slides-KBQA-Zhangjing-WAIC-2022.9.2.pdf" target="_blank">slides</a> </span> </li> 
@@ -653,7 +653,7 @@ on Artificial Intelligence</i>).
 <b>Conference PC members:</b> 
 <br />
 </p><ol>
-	<li>2024: KDD, WWW, ACL, AAAI
+	<li>2024: KDD, WWW, AAAI, ARR
 	<li>2023: KDD, WWW (SPC), AAAI, ECML/PKDD (SPC) 
 	<li>2022: KDD, WWW, IJCAI, AAAI, WSDM
 	<li>2021: KDD, WWW, IJCAI, ECML/PKDD (SPC) 
