--- a/index.html
+++ b/index.html
@@ -614,6 +614,42 @@ on Artificial Intelligence</i>).
 </ol>
 
 
+<hr />
+<h3 class="big"><a name="students"> Students </a></h3>
+I'm very lucky to have the opportunities to work with these brilliant students (ordered by year of enrollment & last name).
+
+Graduate Students
+<ol>
+	<li>Zhiming Yao, Ph.D. student, Fall 2024 -</li>
+	<li>Yang Li, Ph.D. student, Fall 2024 -</li>
+	<li>Bohan Zhang, M.S. student, Fall 2024 -</li>
+	<li>Xiaodong Chen, M.S. student, Fall 2024 -</li>
+	<li>Guanlin Li, M.S. student, Fall 2024 -</li>
+	<li>Yuanchun Wang, Ph.D. student, Fall 2023 -</li>
+	<li>Zeyao Ma, M.S. student, Fall 2023 -</li>
+	<li>Xinmei Huang, M.S. student, Fall 2023 -</li>
+	<li>Xinxin Zhao, Ph.D. student, Fall 2023 - (Co-supervised with Prof. Cuiping Li)</li>
+	<li>Yuxuan Hu, Ph.D. student, Fall 2022 -</li>
+	<li>Xiaokang Zhang, M.S. student, Fall 2022 -</li>
+	<li>Zhonghui Shao, M.S. student, Fall 2022 -</li>
+	<li>Haoyang Li, Ph.D. student, Fall 2021 - (Co-supervised with Prof. Cuiping Li)</li>
+	<li>Xirui Ke, M.S. student, Fall 2021 -</li>
+	<li>Lingxi Zhang, M.S. student, Fall 2021 -</li>
+	<li>Shasha Guo, Ph.D. student, Fall 2020 - (Co-supervised with Prof. Cuiping Li)</li>
+</ol>
+
+Alumni
+<ol>
+	<li>Yanling Wang, Ph.D., 2018-2023. Dissertation Title: Research on Graph Contrastive Learning for Complex Scenes (Co-supervised with Prof. Cuiping Li), First Employment: Zhongguancun Laboratory</li>
+	<li>Jingwen Xu, M.S., 2020-2023. Thesis Title: Few-shot Knowledge Graph Completion Based on Path
+Interaction Supervised Learning and Large Language Model Prompt Learning, First Employment:  China Construction Bank</li>
+	<li>Chenxu Hu, M.S., 2020-2022. Thesis Title: Metadata Management under Multi-model Big Data Systems (Co-supervised with Prof. Feng Zhang), First Employment: People's Bank of China</li>
+	<li>Xiaobin Tang, M.S., 2019-2022. Thesis Title: Interaction and Self-training based Methods for Entity Alignment, First Employment: China Tobacco</li>
+	<li>Xiangying Cao, M.S., 2019-2021. Thesis Title: Entity Linking-based Disambiguation of Academic Institution Names, First Employment: People's Bank of China</li>
+	<li>Lingfan Cai, M.S., 2018-2021. Thesis Title: The optimization of zero-shot entity linking, First Employment: CITIC Securities</li>
+	<li>Bowen Hao, Ph.D., 2017-2022. Dissertation Title: A Research on User Profile Denoising and Cold-start Issue in Recommender System (Co-supervised with Prof. Cuiping Li). First Employment: Assistant Professor, Capital Normal University</li>
+	<li>Bo Chen, M.S., 2017-2020. Thesis Title: Knowledge Graph Integration and Entity Linking from Multi-Sources (Co-supervised with Prof. Hong Chen). First Employment: Pursuing a Ph.D. in Computer Science and Technology at Tsinghua University</li>
+</ol>
 
 <hr />
 <h3 class="big"><a name="talks"> Invited Talks </a></h3>
