--- a/index.html
+++ b/index.html
@@ -616,9 +616,10 @@ on Artificial Intelligence</i>).
 
 <hr />
 <h3 class="big"><a name="students"> Students </a></h3>
+<b></b>
 I'm very lucky to have the opportunities to work with these brilliant students (ordered by year of enrollment & last name).
 
-Graduate Students
+<b>Graduate Students</b>
 <ol>
 	<li>Zhiming Yao, Ph.D. student, Fall 2024 -</li>
 	<li>Yang Li, Ph.D. student, Fall 2024 -</li>
@@ -638,7 +639,7 @@ Graduate Students
 	<li>Shasha Guo, Ph.D. student, Fall 2020 - (Co-supervised with Prof. Cuiping Li)</li>
 </ol>
 
-Alumni
+<b>Alumni</b>
 <ol>
 	<li>Yanling Wang, Ph.D., 2018-2023. Dissertation Title: Research on Graph Contrastive Learning for Complex Scenes (Co-supervised with Prof. Cuiping Li), First Employment: Zhongguancun Laboratory</li>
 	<li>Jingwen Xu, M.S., 2020-2023. Thesis Title: Few-shot Knowledge Graph Completion Based on Path
