--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@ on Artificial Intelligence</i>).
 <hr />
 <h3 class="big"><a name="students"> Students </a></h3>
 <p>
-I'm very lucky to have the opportunities to work with these brilliant students (ordered by year of enrollment & last name).
+I'm very lucky to have the opportunities to work with these brilliant students (ordered by year of enrollment).
 <p>
 <b>Graduate Students</b>
 <ol>
@@ -627,9 +627,9 @@ I'm very lucky to have the opportunities to work with these brilliant students (
 	<li>Xiaodong Chen, M.S. student, Fall 2024 -</li>
 	<li>Guanlin Li, M.S. student, Fall 2024 -</li>
 	<li>Yuanchun Wang, Ph.D. student, Fall 2023 -</li>
+	<li>Xinxin Zhao, Ph.D. student, Fall 2023 - (Co-supervised with Prof. Cuiping Li)</li>
 	<li>Zeyao Ma, M.S. student, Fall 2023 -</li>
 	<li>Xinmei Huang, M.S. student, Fall 2023 -</li>
-	<li>Xinxin Zhao, Ph.D. student, Fall 2023 - (Co-supervised with Prof. Cuiping Li)</li>
 	<li>Yuxuan Hu, Ph.D. student, Fall 2022 -</li>
 	<li>Xiaokang Zhang, M.S. student, Fall 2022 -</li>
 	<li>Zhonghui Shao, M.S. student, Fall 2022 -</li>
