--- a/index.html
+++ b/index.html
@@ -715,10 +715,9 @@ Interaction Supervised Learning and Large Language Model Prompt Learning, First 
 <hr />
 <h3 class="big"><a name="Teaching"> Teaching </a></h3>
 <ol>
-	<li> 2021- Data Structure</ol>
-	<li> 2020- Deep Learning</ol>
-
-
+	<li> 2021- Data Structure</li>
+	<li> 2020- Deep Learning</li>
+</ol>
 <hr />
 <p></p>
 <i> Contact: zhang-jing AT ruc DOT edu DOT cn</i><br/><br/> 
