--- a/index.html
+++ b/index.html
@@ -655,7 +655,9 @@ Interaction Supervised Learning and Large Language Model Prompt Learning, First 
 <hr />
 <h3 class="big"><a name="talks"> Invited Talks </a></h3>
 <ol>
-	<li>2023: Invited Talk about StructruedDataLLM at the 11th China National Conference on Social Media Processing</li>
+	
+	<li>2024: Invited Talk about LLM4DB at Huawei.</li>
+	<li>2023: Invited Talk about StructruedDataLLM at the 11th China National Conference on Social Media Processing.</li>
 	<li>2023: Invited Talk about Integrating Structured Data With LLM at School of Computer Science & Techonlogy, Anhui University.</li>
 	<li>2023: Invited Talk about Integrating Structured Data With LLM by CCF CCF Database Special Committee.</li>
 	<li>2023: Invited Talk about ChatGPT at PingCAP.</li>
