--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@ Interaction Supervised Learning and Large Language Model Prompt Learning, First 
 <hr />
 <h3 class="big"><a name="Teaching"> Teaching </a></h3>
 <ol>
-	<li> 2021- Data Structure</li>
+	<li> 2021- Data Structure and Algorithm</li>
 	<li> 2020- Deep Learning</li>
 </ol>
 <hr />
