--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@ My research direction is data mining and knowledge discovery. My current researc
 		<b>	<a class="url"  onclick="show('LLM')">large language model</a> </b>:  
 			<a class="url"  onclick="show('LLM-finetune')">fine-tuning</a> |
 			<a class="url"  onclick="show('LLM-ka')">knowledge augmentation</a> |
-			<a class="url"  onclick="show('LLM4Compression')">LLM Compression</a> 
+			<a class="url"  onclick="show('LLM4Compression')">LLM Compression</a> | 
 			<a class="url"  onclick="show('LLM4StructuredData')">LLM for Structured Data</a> |
-			<a class="url"  onclick="show('LLM-eval')">evaluation</a> |
+			<a class="url"  onclick="show('LLM-eval')">evaluation</a> 
 		<br />
 	</li>
 	<li style="list-style-type:none">
