--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ Text-to-SQL.</a>
 	</li></div>
 	<div class="pub all conf grl grl-pt">
 	<li> 
-			<a href="" target="_blank">Open-World Semi-Supervised Learning for Node
+			<a href="https://arxiv.org/abs/2403.11483" target="_blank">Open-World Semi-Supervised Learning for Node
 Classification.</a>  
 			<br /> Yanling Wang, <b>Jing Zhang</b>, Lingxi Zhang, Lixin Liu, Yuxiao Dong, Cuiping Li, Hong Chen, Hongzhi Yin.
 			<br /> <b>ICDE'24</b>. 
