--- a/index.html
+++ b/index.html
@@ -257,6 +257,28 @@ My research direction is data mining and knowledge discovery. My current researc
 	
 
 <ol>
+
+	<div class="pub all conf LLM LLM4StructuredData">
+	<li> 
+			<a href="https://arxiv.org/abs/2403.19318" target="_blank">TableLLM: Enabling Tabular Data Manipulation by LLMs in Real Office Usage Scenarios
+.</a>  
+			<br /> Xiaokang Zhang, <b>Jing Zhang</b>, Zeyao Ma, Yang Li, Bohan Zhang, Guanlin Li, Zijun Yao, Kangli Xu, Jinchang Zhou, Daniel Zhang-Li, Jifan Yu, Shu Zhao, Juanzi Li, Jie Tang
+			<br /> <b>arXiv:2403.19318</b>. 
+			<br><a class="button" href="https://tablellm.github.io/" target="_blank">code&model&data&demo</a> 
+	</li></div>
+	<div class="pub all conf LLM LLM4Compression">
+	<li> 
+			<a href="https://arxiv.org/abs/2403.19135" target="_blank">Compressing Large Language Models by Streamlining
+the Unimportant Layer.</a>  
+			<br /> Xiaodong Chan, Yuxuan Hu, <b>Jing  Zhang</b>
+			<br /> <b>arXiv:2403.19135</b>. 
+	</li></div>
+	<div class="pub all conf LLM LLM4StructuredData">
+	<li> 
+			<a href="https://arxiv.org/abs/2402.05121" target="_blank">Large Language Model for Table Processing: A Survey.</a>  
+			<br /> Weizheng Lu, Jiaming Zhang, Jing Zhang, Yueguo Chen
+			<br /> <b>arXiv:2402.05121</b>. 
+	</li></div>
 	<div class="pub all conf LLM LLM4StructuredData">
 	<li> 
 			<a href="https://arxiv.org/pdf/2402.16347.pdf" target="_blank">CodeS: Towards Building Open-source Language Models for
@@ -272,16 +294,29 @@ Classification.</a>
 			<br /> Yanling Wang, <b>Jing Zhang</b>, Lingxi Zhang, Lixin Liu, Yuxiao Dong, Cuiping Li, Hong Chen, Hongzhi Yin.
 			<br /> <b>ICDE'24</b>. 
 	</li></div>
+	<div class="pub all conf LLM kr">
+	<li> 
+			<a href="https://arxiv.org/pdf/2404.03491.pdf" target="_blank">A Cause-Effect Look at Alleviating Hallucination of Knowledge-grounded Dialogue Generation.</a>  
+			<br /> Jifan Yu, Xiaohan Zhang, Yifan Xu, Xuanyu Lei, Zijun Yao, <b>Jing Zhang</b>b, Lei Hou, Juanzi Li
+			<br /> <b>LREC-COLING'24</b>. 
+	</li></div>
 	<div class="pub all conf LLM LLM4StructuredData kr kr-qa">
 	<li> 
-			<a href="" target="_blank">Diversifying Question Generation over Knowledge Base via External Natural Questions.</a>  
+			<a href="https://arxiv.org/abs/2309.14362" target="_blank">Diversifying Question Generation over Knowledge Base via External Natural Questions.</a>  
 			<br /> Shasha Guo, <b>Jing Zhang</b>, Xirui Ke, Cuiping Li, Hong Chen
 			<br /> <b>LREC-COLING'24</b>. 
+	</li></div>
+	<div class="pub all conf LLM LLM4StructuredData kr kr-qa">
+	<li> 
+			<a href="https://arxiv.org/pdf/2404.01923.pdf" target="_blank">SGSH: Stimulate Large Language Models with Skeleton Heuristics for
+Knowledge Base Question Generation.</a>  
+			<br /> Shasha Guo, Lizi Liao, <b>Jing Zhang<sup>*</sup></b>, Yanling Wang, Cuiping Li, Hong Chen
+			<br /> <b>Findings of NAACL'24</b>. 
 	</li></div>
 	<div class="pub all conf LLM LLM4Compression">
 		<li> 
 			<a href="https://arxiv.org/pdf/2308.16475.pdf" target="_blank">Transformer Compression via Subspace Projection.</a>  
-			<br /> Yuxuan Hu, <b>Jing Zhang</b>, Chen Zhao, Cuiping Li, Hong Chen.
+			<br /> Yuxuan Hu, <b>Jing Zhang<sup>*</sup></b>, Chen Zhao, Cuiping Li, Hong Chen.
 			<br /> <b>arXiv:2308.16475</b>. 
 	</li></div>
 	<div class="pub all conf LLM">
